@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
+<ModSyncNinjaData>
+	<ID>e60ea4de-d114-466c-adb5-e9bf9c01f50b</ID>
+	<ModName>Shutdown All</ModName>
+	<Version>b18-1.0.0</Version>
+	<SaveBreaking>false</SaveBreaking>
+</ModSyncNinjaData>
